--- a/src/Acme.BookStore.Web/Pages/Products/Index.cshtml
+++ b/src/Acme.BookStore.Web/Pages/Products/Index.cshtml
@@ -10,8 +10,16 @@
 
 <abp-card>
 	<abp-card-header>
-		<h2>@L["Menu:Books"]</h2>
-	</abp-card-header>
+ <abp-row>
+ <abp-column size-md="_6">
+ <abp-card-title>@L["Menu:Books"]</abp-card-title>
+ </abp-column>
+	<abp-column size-md="_6" class="text-end">
+ <abp-button id="NewProductButton" text="@L["NewProduct"].Value" icon="plus" button-type="Primary"/>
+ </abp-column>
+ </abp-row>
+</abp-card-header>
+
 
 	<abp-card-body>
 		<abp-table id="ProductsTable" striped-rows="true"/>
